Eclipse_Titan_Core/titan.core/regression_test/compileonly/mfgen-tpd/invalid_buildconfig_tpd/Hello123/Hello123.tpd
<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (c) 2000-2017 Ericsson Telecom AB
 All rights reserved. This program and the accompanying materials
 are made available under the terms of the Eclipse Public License v1.0
 which accompanies this distribution, and is available at
 http://www.eclipse.org/legal/epl-v10.html

 Contributors:
  Balasko, Jeno
  Beres, Szabolcs
-->
<TITAN_Project_File_Information version="1.0">
  <ProjectName>Hello123</ProjectName>
  <ReferencedProjects>
    <ReferencedProject name="Hello000" projectLocationURI="../Hello000/Hello000.tpd"/>
  </ReferencedProjects>
  <Folders>
    <FolderResource projectRelativePath="src" relativeURI="src"/>
  </Folders>
  <Files>
    <FileResource projectRelativePath="Hello123.tpd" relativeURI="Hello123.tpd"/>
    <FileResource projectRelativePath="src/MyExample1.cfg" relativeURI="src/MyExample1.cfg"/>
    <FileResource projectRelativePath="src/MyExample1.ttcn" relativeURI="src/MyExample1.ttcn"/>
    <FileResource projectRelativePath="src/PCOType1.cc" relativeURI="src/PCOType1.cc"/>
    <FileResource projectRelativePath="src/PCOType1.hh" relativeURI="src/PCOType1.hh"/>
  </Files>
  <ActiveConfiguration>a</ActiveConfiguration>
  <Configurations>
    <Configuration name="Default">
      <ProjectProperties>
        <MakefileSettings>
          <generateInternalMakefile>true</generateInternalMakefile>
          <symboliclinklessBuild>true</symboliclinklessBuild>
          <targetExecutable>bin\Hello123.exe</targetExecutable>
        </MakefileSettings>
        <LocalBuildSettings>
          <workingDirectory>bin</workingDirectory>
        </LocalBuildSettings>
      </ProjectProperties>
    </Configuration>
    <Configuration name="a">
      <ProjectProperties>
        <MakefileSettings>
          <generateMakefile>false</generateMakefile>
          <generateInternalMakefile>true</generateInternalMakefile>
          <symboliclinklessBuild>true</symboliclinklessBuild>
          <targetExecutable>bin\Hello123.exe</targetExecutable>
        </MakefileSettings>
        <LocalBuildSettings>
          <workingDirectory>bin</workingDirectory>
        </LocalBuildSettings>
        <ConfigurationRequirements>
          <configurationRequirement>
            <projectName>Hello000</projectName>
            <rerquiredConfiguration>notExistingBuildConfig</rerquiredConfiguration>
          </configurationRequirement>
        </ConfigurationRequirements>
      </ProjectProperties>
    </Configuration>
  </Configurations>
</TITAN_Project_File_Information>
